@@ -7,6 +7,7 @@ Improved ZX Desktop:
 -Added devices icons
 -Reordered menu items
 -Windows are not closed when changing ZX Desktop size
+-Added new ZX Desktop fill types: Chess, Grid, Random
 
 Fixed segfaults when changing machines and having ZX Desktop windows opened
 
